# Agent-Lab

./: .gitignore  README.md  main.py  pyproject.toml
.github/agents/: adr-generator.agent.md  planning-agent.agent.md
.github/instructions/: python.instructions.md
.github/skills/adr-writing/: SKILL.md  adr-template.md
.github/skills/adr-writing/examples/: 0001-use-sqlite-for-initial-database.md  (+1 more)
.github/skills/diataxis-docs/: SKILL.md
.github/skills/fastapi-hexagonal/: SKILL.md
.github/skills/modern-python-tooling/: SKILL.md
alembic/: env.py
alembic/versions/: 20260603_0001_create_todos_table.py
docs/adr/: 0001-use-sqlite-for-initial-todo-storage.md  0002-use-layered-fastapi-structure.md  0003-use-sqlmodel-for-sqlite-access.md  adr-0001-runtime-and-package-management.md  adr-0002-openapi-contract-first.md  adr-0003-persistence-strategy.md  adr-0004-todo-api-behavior.md  adr-0005-date-and-time-conventions.md  adr-0006-error-handling-and-response-normalization.md  adr-0007-non-functional-boundaries.md  adr-0008-fastapi-hexagonal-architecture.md
docs/reference/: todo-api.md
docs/spec/: openapi.yaml
src/agent_lab/: __init__.py  main.py
src/agent_lab/application/: __init__.py
src/agent_lab/bootstrap/: __init__.py  app_factory.py  config.py  container.py
src/agent_lab/domain/: __init__.py  errors.py
src/agent_lab/infrastructure/: __init__.py  clock.py
src/agent_lab/presentation/: __init__.py
tasks/: 001-setup-fastapi-todo-service.md  002-implement-todo-api.md  003-add-tests-and-docker.md
tests/: conftest.py  test_todo_api.py
(+37 files in other folders)
